--- a/tz-store/src/main/resources/application.yaml
+++ b/tz-store/src/main/resources/application.yaml
@@ -17,7 +17,7 @@ spring:
       host: smtp.gmail.com
       port: 587
       username: yourtzstore
-      password: thisisthewizardofmusic
+      password: *****
       properties:
         mail:
           smtp:
